[package]
name = "yew-app"
version = "0.1.0"
authors = ["andre"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
# muicss-yew = {path = "./../muicss-yew/"}
